# tm-bank

./: .gitignore  Cargo.toml  LICENSE  POLICY.md  README.md  TERMS.md  package.json  pnpm-lock.yaml
app/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
app/src/: App.css  App.tsx  Layout.tsx  deeplinks.ts  main.tsx  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: auth.rs  lib.rs  state.rs
app/src/components/: tm-bank.tsx
app/src/components/sidebar/: app-sidebar-footer.tsx  app-sidebar.tsx
app/src/providers/: auth-provider.tsx
app/src/routes/: HomePage.tsx  auth.tsx
core/: Cargo.toml
core/src/: items.rs  lib.rs  maps.rs  moderation.rs  tags.rs  user.rs  votes.rs
core/src/types/: items.rs  maps.rs  mod.rs  user.rs  votes.rs
server/: Cargo.toml  package.json  pnpm-lock.yaml
server/src/: cli.ts  db.ts  denylist.ts  emit.ts  index.ts
server/src/routes/: auth.ts
server/src/types/: index.ts
